--- a/post/2020-12-06-new-post.Rmd
+++ b/post/2020-12-06-new-post.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'The great debate: R vs. Python'
+title: 'The Great Debate: R vs. Python'
 author: ''
 date: '2020-12-06'
 slug: new-post
@@ -10,11 +10,43 @@ description: ''
 If you have ever lingered on stack exchange, you have likely come across the great debate between R and Python amongst coders. Some say that R is just not enough when it comes to machine learning, but others would lay their life down for its visualization capabilities in ggplot. Some people absolutely love the cleanliness of python code, while others cannot get over the difficulty of regex. You know what I say, why not both!? 
 ![](/post/2020-12-06-new-post_files/Why not both, R and python.png)
 
-I will show you how to use both R and python in the same script using the package: `reticulate`. I will manipulate the infamous `iris` and `diamonds` dataset in both R and python to prove that not only can these languages speak to each other, but they can also perform identical tasks using different functions. I will create a new column in each dataset as well as plot some of the variables. 
-```{R}
+I will show you how to use both R and python in the same script using the package: `reticulate`. I will manipulate the infamous `diamonds` dataset in python and plot the data in R to prove that not only can these languages speak to each other, but they can perform various tasks with high efficiency to achieve one goal. The purpose of this post is to highlight the desired capabilities of both R and python, showing that we truly do need both of them.  
+```{R message=FALSE, warning=FALSE}
 library(reticulate)
 library(tidyverse)
-irisR <- iris
 ```
+
+#Python:
+In the next few chunks I will manipulate the `diamonds` dataset in python. Manipulation in python is extrememly simple and can be done with just a few lines of code. The syntax is similar to `dplyr`  in R, but it takes a lot less lines of code to do what you want in python. This is a desirable characteristic of python, and is just one reason as to why some use python over R for data manipulation. 
+```{python}
+import matplotlib.pyplot as plt
+import seaborn as sns
+import numpy as np
+import pandas as pd
+import seaborn as sns
+
+df = sns.load_dataset('diamonds')
+```
+
+Making new variables: 
+```{python}
+#volume of the diamond variable made: mm^3
+df2=df.assign(size = df['x']*df['y']*df['z'])
+#new carat per volume variable: 
+df3=df2.assign(carat_per_volume = df2['carat']/df2['size'])
+df3
+#df3 will be the new dataset moving forward.
+```
+
+#R: 
+In the next chunks, I will show you how to plot data in `ggplot` in R from the manipulated `diamonds` dataset in python. This is a very common way to use reticulate as the ggplot graphics are beautiful and can be easily produced with fairly simple code. One may desire to import their dataframe from python as manipulation can be easier and completed with neater code in python compared to R. 
+
+```{r}
+ggplot(py$df3, aes(carat_per_volume, price, color = color)) + geom_point() + facet_wrap(~cut)
+```
+
+As you can see, the plot above shows scatterplots of carats per their diamond's volume vs. price of the corresponding diamond. The plots are faceted by cut and the points are colored by color category of the diamond. These aspects of ggplot are highly desirable for those trying to portray relationships between more than two variables in their data, with just a few code adjustments. Ggplot is just one reason why some may prefer R over python. 
+
+I hope that you have gotten a glimpse of the great debate through the example above. It is important that you appreciate your coding languages for what they can offer, and you do not choose one or the other. With that being said, I end the great debate here, with a draw. R and Python, you will prevail! 
 
 
